address review comments from Rob Young.
Signed-off-by: Keith Wall <kwall@apache.org>